Share contact is added.

--- a/TelegramBot.AdminPanel/appsettings.json
+++ b/TelegramBot.AdminPanel/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Host = 127.0.0.1; Port = 5432; Database = TelegramBot; User Id = postgres; Password = Xy010903"
+  }
 }
