--- a/TelegramBot/appsettings.json
+++ b/TelegramBot/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "BotToken": "5846906598:AAG0BLO9CCvDpmX55ckt3FbiiwI_5tjVOt8",
+  "BotToken": "5846906598:",
   "ConnectionStrings": {
     "Default": "Host = 127.0.0.1; Port = 5432; Database = TelegramBot; User Id = postgres; Password = Xy010903"
   }
