--- a/TelegramBot/appsettings.json
+++ b/TelegramBot/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "BotToken": "5846906598:",
   "ConnectionStrings": {
-    "Default": "Host = 127.0.0.1; Port = 5432; Database = TelegramBot; User Id = postgres; Password = Xy010903"
+    "Default": "Host = 127.0.0.1; Port = 5432; Database = TelegramBot; User Id = postgres; Password = "
   }
 }
